# refer

./: Cargo.toml  Trunk.toml  build.rs  index.html  styles.css
locales/: en.json  ru.json
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  mod.rs  sql.rs
